--- a/src/partials/_homepage.scss
+++ b/src/partials/_homepage.scss
@@ -1,4 +1,4 @@
-#homepage{
+div#homepage{
 
  header{
    .header-up{
@@ -26,23 +26,72 @@
        a{
          text-decoration: none;
          color: $color-white;
+         img{
+           width: 70px;
+         }
          i{
            vertical-align: middle;
          }
        }
      }
+   }
+ }
+
+ main{
+   .section-1{
+     padding:  20px 160px;
+     width: 100%;
+     height: 400px;
+     background-image: url('../img/bg-painter-home.jpg');
+     background-size:cover;
+     img{
+       width: 150px;
+       margin-bottom: 10px;
+     }
+     .margin{
+       margin: 0;
+     }
+     .bold{
+       font-weight: bold;
+     }
+     div.button{
+      @include display-flex-start;
+        padding-top: 20px;
+
+      .bg-black{
+        background-color: $bg-black;
+        border: 1px solid  $color-black;
+        margin-right: 20px;
+        padding: 5px 15px;
+        a {
+          color:$color-white;
+          text-decoration: none;
+        }
+      }
+      .bg-brown{
+        background-color: $bg-brown;
+        border: 1px solid  $color-black;
+        padding: 5px 15px;
+          a {
+          color:$color-black;
+          text-decoration: none;
+        }
+
+      }
+
+     }
+
+
+
 
 
 
    }
 
 
+
+
+
+
  }
-
-
-
-
-
-
-
 }
