--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,9 +1,12 @@
 $bg-black: black;
 $bg-lightgrey:lightgrey;
 $bg-brown:#ECD79E;
+$bg-grey:#E8E8E8;
 $color-lightgrey:lightgrey;
 $color-white:white;
 $color-black:black;
+$color-purple:#D669A8;
+
 
 
 
