--- a/src/partials/_homepage.scss
+++ b/src/partials/_homepage.scss
@@ -38,6 +38,8 @@ div#homepage{
  }
 
  main{
+    height: 100px;
+    width: 100%;
    .section-1{
      padding:  20px 160px;
      width: 100%;
@@ -48,50 +50,39 @@ div#homepage{
        width: 150px;
        margin-bottom: 10px;
      }
-     .margin{
+     p.limited{
        margin: 0;
-     }
-     .bold{
        font-weight: bold;
-     }
+       font-size: 10px;
+        color: $color-purple;
+      }
      div.button{
-      @include display-flex-start;
-        padding-top: 20px;
-
-      .bg-black{
-        background-color: $bg-black;
-        border: 1px solid  $color-black;
-        margin-right: 20px;
-        padding: 5px 15px;
-        a {
-          color:$color-white;
-          text-decoration: none;
-        }
+       @include display-flex-start;
+       padding-top: 20px;
+       .bg-black{
+         background-color: $bg-black;
+         border: 1px solid  $color-black;
+         margin-right: 20px;
+         padding: 5px 15px;
+         a {
+           color:$color-white;
+           text-decoration: none;
+         }
+       }
+       .bg-brown{
+         background-color: $bg-brown;
+         border: 1px solid  $color-black;
+         padding: 5px 15px;
+         a{
+           color:$color-black;
+           text-decoration: none;
+         }
+       }
       }
-      .bg-brown{
-        background-color: $bg-brown;
-        border: 1px solid  $color-black;
-        padding: 5px 15px;
-          a {
-          color:$color-black;
-          text-decoration: none;
-        }
+    }
 
-      }
-
-     }
-
-
-
-
-
-
-   }
-
-
-
-
-
-
- }
+    .section-2{
+    
+    }
+  }
 }
